Remove unnecessary code, create acceptance tests for the Neo4jRepository auto generated endpoints and create a custom search endpoint to search for users by name

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.apache.commons:commons-lang3:3.10'
+	implementation 'org.apache.commons:commons-collections4:4.4'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
