--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=admin
-spring.neo4j.uri=bolt://users-neo4j:7687
+spring.neo4j.uri=bolt://localhost:7687
 org.neo4j.ogm=DEBUG
